1999-05-17  Loic Dachary  <loic@ceic.com>

	* Catalog-0.9 release

	* lib/Catalog.pm (initialize): initialization encoding bug fix thanks to wojtekz@cnt.pl

	* doc/catalog.texinfo: add _PATH[0-9]+_ documentation

	* lib/Catalog/mysql/schema.pm: changed login name length 16 -> 32 for dmoz in auth tables

1999-05-15  Loic Dachary  <loic@ceic.com>

	* Catalog-0.8 release

	* doc/catalog.texinfo (dmoz.org): better documentation for loading dmoz

	* lib/Catalog.pm, lib/Catalog/implementation.pm : extract non HTML code from Catalog.pm -> implementation.pm

	* lib/Catalog/dmoz.pm : custom import form, simpler and more comments. Separate conversion and loading.

1999-05-14  Loic Dachary  <loic@ceic.com>

	* lib/Catalog.pm: dump directory is created if it does not exist

	* mysql.pm is now a member of sqledit.conf, not base class

	* created db.pm, wrapping mysql.pm chosing the database type according to
	  db.conf

	* Catalog::mysql Catalog::tools::mysql Catalog::dmoz::mysql now contain tables declarations
	  for mysql. First step to database independance. 

	* INSTALL: added USE_CONFIG to reuse existing configuration

	* conf/Makefile.PL: add home in mysql.conf (base install directory) bound to MYSQL_HOME,
	  updated mysql.pm and t/lib.pl accordingly.


1999-05-13  Loic Dachary  <loic@ceic.com>

	* lib/Catalog/external.pm (Catalog): user specified catalog name overrides catalog name in file

	* INSTALL: added freebsd31 + simplify use of CPAN

	* cgi-bin/Makefile (.PL): Non GNU make need .SUFFIXES before implicit rule

	* Makefile.PL: now show version number of related packages

	* INSTALL.apache (prefix): removed rewrite because bugous sometimes and not mandatory

	* Makefile.PL (MY::postamble): removed cvs_diff_tag and cvs_commit, replaced by contribute

	* lib/Bundle/Catalog.pm: added Catalog itself since it made his way into CPAN

1999-05-13  Tim Bunce  <Tim.Bunce@ig.co.uk>

	* Makefile.PL: version_check prints version number of modules.