@@ -156,4 +156,4 @@ operations for managing the contributions.
 
  back to 1)
 
-$Header: /spare2/ecila-cvsroot/Catalog/CONTRIBUTIONS,v 1.2 1999/05/15 14:20:46 ecila40 Exp $
+$Header: /usr/local/cvsroot/Catalog/CONTRIBUTIONS,v 1.2 1999/05/15 14:20:46 ecila40 Exp $
