@@ -1,4 +1,4 @@
-$Header: /spare2/ecila-cvsroot/Catalog/README,v 1.7 1999/05/15 14:20:46 ecila40 Exp $
+$Header: /usr/local/cvsroot/Catalog/README,v 1.7 1999/05/15 14:20:46 ecila40 Exp $
 
 What is it ?
 ------------
